gen/com/jivesoftware/robot/intellij/plugin/parser/RobotParser.java
// This is a generated file. Not intended for manual editing.
package com.jivesoftware.robot.intellij.plugin.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.openapi.diagnostic.Logger;
import static com.jivesoftware.robot.intellij.plugin.parser.RobotTypes.*;
import static com.jivesoftware.robot.intellij.plugin.parser.RobotParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class RobotParser implements PsiParser {

  public static final Logger LOG_ = Logger.getInstance("com.jivesoftware.robot.intellij.plugin.parser.RobotParser");

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    if (root_ == ARGUMENTS_SETTING) {
      result_ = ARGUMENTS_SETTING(builder_, 0);
    }
    else if (root_ == ARGUMENT_DEF) {
      result_ = ARGUMENT_DEF(builder_, 0);
    }
    else if (root_ == ARRAY_ASSIGNABLE_IN_VARIABLES_TBL) {
      result_ = ARRAY_ASSIGNABLE_IN_VARIABLES_TBL(builder_, 0);
    }
    else if (root_ == ARRAY_ASSIGNMENT) {
      result_ = ARRAY_ASSIGNMENT(builder_, 0);
    }
    else if (root_ == ARRAY_ASSIGNMENT_LHS) {
      result_ = ARRAY_ASSIGNMENT_LHS(builder_, 0);
    }
    else if (root_ == ARRAY_VARIABLE) {
      result_ = ARRAY_VARIABLE(builder_, 0);
    }
    else if (root_ == ASSIGNABLE_IN_VARIABLES_TBL) {
      result_ = ASSIGNABLE_IN_VARIABLES_TBL(builder_, 0);
    }
    else if (root_ == ASSIGNMENT) {
      result_ = ASSIGNMENT(builder_, 0);
    }
    else if (root_ == BAD_KEYWORD_LINE) {
      result_ = BAD_KEYWORD_LINE(builder_, 0);
    }
    else if (root_ == BAD_SETTINGS_LINE) {
      result_ = BAD_SETTINGS_LINE(builder_, 0);
    }
    else if (root_ == BAD_TEST_CASE_LINE) {
      result_ = BAD_TEST_CASE_LINE(builder_, 0);
    }
    else if (root_ == BAD_VARIABLES_LINE) {
      result_ = BAD_VARIABLES_LINE(builder_, 0);
    }
    else if (root_ == DOCUMENTATION_SETTING) {
      result_ = DOCUMENTATION_SETTING(builder_, 0);
    }
    else if (root_ == DOUBLE_BOUND_FOR_LOOP) {
      result_ = DOUBLE_BOUND_FOR_LOOP(builder_, 0);
    }
    else if (root_ == DOUBLE_BOUND_FOR_LOOP_WITH_STEP) {
      result_ = DOUBLE_BOUND_FOR_LOOP_WITH_STEP(builder_, 0);
    }
    else if (root_ == ELLIPSES) {
      result_ = ELLIPSES(builder_, 0);
    }
    else if (root_ == ELLIPSES_FOR_SETTINGS_TABLE) {
      result_ = ELLIPSES_FOR_SETTINGS_TABLE(builder_, 0);
    }
    else if (root_ == ELLIPSES_FOR_TEST_TABLE) {
      result_ = ELLIPSES_FOR_TEST_TABLE(builder_, 0);
    }
    else if (root_ == ELLIPSES_LINE_SETTINGS) {
      result_ = ELLIPSES_LINE_SETTINGS(builder_, 0);
    }
    else if (root_ == ELLIPSES_LINE_TEST) {
      result_ = ELLIPSES_LINE_TEST(builder_, 0);
    }
    else if (root_ == EMPTY_LINE) {
      result_ = EMPTY_LINE(builder_, 0);
    }
    else if (root_ == END_OF_LINE) {
      result_ = END_OF_LINE(builder_, 0);
    }
    else if (root_ == ERROR) {
      result_ = ERROR(builder_, 0);
    }
    else if (root_ == EXECUTION_LINE) {
      result_ = EXECUTION_LINE(builder_, 0);
    }
    else if (root_ == FORCE_TAGS_SETTING) {
      result_ = FORCE_TAGS_SETTING(builder_, 0);
    }
    else if (root_ == FOR_LOOP_IN) {
      result_ = FOR_LOOP_IN(builder_, 0);
    }
    else if (root_ == FOR_LOOP_IN_RANGE) {
      result_ = FOR_LOOP_IN_RANGE(builder_, 0);
    }
    else if (root_ == FOR_LOOP_VALUE_LIST) {
      result_ = FOR_LOOP_VALUE_LIST(builder_, 0);
    }
    else if (root_ == FOR_VAR_IN) {
      result_ = FOR_VAR_IN(builder_, 0);
    }
    else if (root_ == FOR_VAR_IN_RANGE) {
      result_ = FOR_VAR_IN_RANGE(builder_, 0);
    }
    else if (root_ == GENERIC_SETTING) {
      result_ = GENERIC_SETTING(builder_, 0);
    }
    else if (root_ == INDENTED_ELLIPSES_FOR_TEST_TABLE) {
      result_ = INDENTED_ELLIPSES_FOR_TEST_TABLE(builder_, 0);
    }
    else if (root_ == INDENTED_ELLIPSES_LINE_TEST) {
      result_ = INDENTED_ELLIPSES_LINE_TEST(builder_, 0);
    }
    else if (root_ == INDENTED_KEYWORD_INVOCATION_TEST) {
      result_ = INDENTED_KEYWORD_INVOCATION_TEST(builder_, 0);
    }
    else if (root_ == INDENTED_KEYWORD_LINE) {
      result_ = INDENTED_KEYWORD_LINE(builder_, 0);
    }
    else if (root_ == INDENTED_VARIABLE_ASSIGN_TO_KEYWORD) {
      result_ = INDENTED_VARIABLE_ASSIGN_TO_KEYWORD(builder_, 0);
    }
    else if (root_ == KEYWORD) {
      result_ = KEYWORD(builder_, 0);
    }
    else if (root_ == KEYWORDS_TABLE) {
      result_ = KEYWORDS_TABLE(builder_, 0);
    }
    else if (root_ == KEYWORDS_TABLE_HEADING) {
      result_ = KEYWORDS_TABLE_HEADING(builder_, 0);
    }
    else if (root_ == KEYWORD_ARG) {
      result_ = KEYWORD_ARG(builder_, 0);
    }
    else if (root_ == KEYWORD_ARG_LIST) {
      result_ = KEYWORD_ARG_LIST(builder_, 0);
    }
    else if (root_ == KEYWORD_DEFINITION) {
      result_ = KEYWORD_DEFINITION(builder_, 0);
    }
    else if (root_ == KEYWORD_DEFINITION_HEADER) {
      result_ = KEYWORD_DEFINITION_HEADER(builder_, 0);
    }
    else if (root_ == KEYWORD_INVOCATION_SETTINGS) {
      result_ = KEYWORD_INVOCATION_SETTINGS(builder_, 0);
    }
    else if (root_ == KEYWORD_INVOCATION_TEST) {
      result_ = KEYWORD_INVOCATION_TEST(builder_, 0);
    }
    else if (root_ == KEYWORD_LINE) {
      result_ = KEYWORD_LINE(builder_, 0);
    }
    else if (root_ == KEYWORD_SETTING) {
      result_ = KEYWORD_SETTING(builder_, 0);
    }
    else if (root_ == KEYWORD_SETTINGS) {
      result_ = KEYWORD_SETTINGS(builder_, 0);
    }
    else if (root_ == KEYWORD_SETTING_LINE) {
      result_ = KEYWORD_SETTING_LINE(builder_, 0);
    }
    else if (root_ == KEYWORD_TITLE) {
      result_ = KEYWORD_TITLE(builder_, 0);
    }
    else if (root_ == MULTI_ASSIGNMENT_LHS) {
      result_ = MULTI_ASSIGNMENT_LHS(builder_, 0);
    }
    else if (root_ == RESOURCE_FILE) {
      result_ = RESOURCE_FILE(builder_, 0);
    }
    else if (root_ == RESOURCE_SETTING) {
      result_ = RESOURCE_SETTING(builder_, 0);
    }
    else if (root_ == RETURN_LINE) {
      result_ = RETURN_LINE(builder_, 0);
    }
    else if (root_ == RETURN_SETTING) {
      result_ = RETURN_SETTING(builder_, 0);
    }
    else if (root_ == SCALAR_ASSIGNMENT) {
      result_ = SCALAR_ASSIGNMENT(builder_, 0);
    }
    else if (root_ == SCALAR_ASSIGNMENT_LHS) {
      result_ = SCALAR_ASSIGNMENT_LHS(builder_, 0);
    }
    else if (root_ == SCALAR_DEFAULT_ARG_VALUE) {
      result_ = SCALAR_DEFAULT_ARG_VALUE(builder_, 0);
    }
    else if (root_ == SCALAR_VARIABLE) {
      result_ = SCALAR_VARIABLE(builder_, 0);
    }
    else if (root_ == SETTING) {
      result_ = SETTING(builder_, 0);
    }
    else if (root_ == SETTINGS_LINE) {
      result_ = SETTINGS_LINE(builder_, 0);
    }
    else if (root_ == SETTINGS_TABLE) {
      result_ = SETTINGS_TABLE(builder_, 0);
    }
    else if (root_ == SETTINGS_TABLE_HEADING) {
      result_ = SETTINGS_TABLE_HEADING(builder_, 0);
    }
    else if (root_ == SETTING_LIST) {
      result_ = SETTING_LIST(builder_, 0);
    }
    else if (root_ == SETTING_LIST_OR_ELLIPSES) {
      result_ = SETTING_LIST_OR_ELLIPSES(builder_, 0);
    }
    else if (root_ == SINGLE_ASSIGNMENT_LHS) {
      result_ = SINGLE_ASSIGNMENT_LHS(builder_, 0);
    }
    else if (root_ == SINGLE_BOUND_FOR_LOOP) {
      result_ = SINGLE_BOUND_FOR_LOOP(builder_, 0);
    }
    else if (root_ == SINGLE_VARIABLE_LIST) {
      result_ = SINGLE_VARIABLE_LIST(builder_, 0);
    }
    else if (root_ == TABLE) {
      result_ = TABLE(builder_, 0);
    }
    else if (root_ == TAG) {
      result_ = TAG(builder_, 0);
    }
    else if (root_ == TAGS_SETTING) {
      result_ = TAGS_SETTING(builder_, 0);
    }
    else if (root_ == TAG_LIST) {
      result_ = TAG_LIST(builder_, 0);
    }
    else if (root_ == TAG_LIST_OR_ELLIPSES) {
      result_ = TAG_LIST_OR_ELLIPSES(builder_, 0);
    }
    else if (root_ == TAG_LIST_OR_ELLIPSES_NO_COL) {
      result_ = TAG_LIST_OR_ELLIPSES_NO_COL(builder_, 0);
    }
    else if (root_ == TESTCASE_LINE) {
      result_ = TESTCASE_LINE(builder_, 0);
    }
    else if (root_ == TEST_CASE) {
      result_ = TEST_CASE(builder_, 0);
    }
    else if (root_ == TEST_CASES_TABLE) {
      result_ = TEST_CASES_TABLE(builder_, 0);
    }
    else if (root_ == TEST_CASES_TABLE_HEADING) {
      result_ = TEST_CASES_TABLE_HEADING(builder_, 0);
    }
    else if (root_ == TEST_CASE_HEADER) {
      result_ = TEST_CASE_HEADER(builder_, 0);
    }
    else if (root_ == TEST_CASE_SETUP_SETTING) {
      result_ = TEST_CASE_SETUP_SETTING(builder_, 0);
    }
    else if (root_ == TEST_CASE_TEARDOWN_SETTING) {
      result_ = TEST_CASE_TEARDOWN_SETTING(builder_, 0);
    }
    else if (root_ == TEST_CASE_TEMPLATE_SETTING) {
      result_ = TEST_CASE_TEMPLATE_SETTING(builder_, 0);
    }
    else if (root_ == TEST_CASE_TIMEOUT_SETTING) {
      result_ = TEST_CASE_TIMEOUT_SETTING(builder_, 0);
    }
    else if (root_ == TEST_SETTING) {
      result_ = TEST_SETTING(builder_, 0);
    }
    else if (root_ == TEST_SETTING_LINE) {
      result_ = TEST_SETTING_LINE(builder_, 0);
    }
    else if (root_ == TEST_SETUP_SETTING) {
      result_ = TEST_SETUP_SETTING(builder_, 0);
    }
    else if (root_ == TEST_SETUP_TOKEN) {
      result_ = TEST_SETUP_TOKEN(builder_, 0);
    }
    else if (root_ == VARIABLE) {
      result_ = VARIABLE(builder_, 0);
    }
    else if (root_ == VARIABLES_LINE) {
      result_ = VARIABLES_LINE(builder_, 0);
    }
    else if (root_ == VARIABLES_TABLE) {
      result_ = VARIABLES_TABLE(builder_, 0);
    }
    else if (root_ == VARIABLES_TABLE_HEADING) {
      result_ = VARIABLES_TABLE_HEADING(builder_, 0);
    }
    else if (root_ == VARIABLE_ASSIGN_TO_KEYWORD) {
      result_ = VARIABLE_ASSIGN_TO_KEYWORD(builder_, 0);
    }
    else {
      result_ = parse_root_(root_, builder_, 0);
    }
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
    return builder_.getTreeBuilt();
  }

  protected boolean parse_root_(final IElementType root_, final PsiBuilder builder_, final int level_) {
    return robotFile(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // ARGUMENTS_SETTING_TOKEN (COLUMN_SEP_TOKEN ARGUMENT_DEF)*
  public static boolean ARGUMENTS_SETTING(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ARGUMENTS_SETTING")) return false;
    if (!nextTokenIs(builder_, ARGUMENTS_SETTING_TOKEN)) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, ARGUMENTS_SETTING_TOKEN);
    result_ = result_ && ARGUMENTS_SETTING_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, ARGUMENTS_SETTING, result_);
    return result_;
  }

  // (COLUMN_SEP_TOKEN ARGUMENT_DEF)*
  private static boolean ARGUMENTS_SETTING_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ARGUMENTS_SETTING_1")) return false;
    int pos_ = current_position_(builder_);
    while (true) {
      if (!ARGUMENTS_SETTING_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "ARGUMENTS_SETTING_1", pos_)) break;
      pos_ = current_position_(builder_);
    }
    return true;
  }

  // COLUMN_SEP_TOKEN ARGUMENT_DEF
  private static boolean ARGUMENTS_SETTING_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ARGUMENTS_SETTING_1_0")) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COLUMN_SEP_TOKEN);
    result_ = result_ && ARGUMENT_DEF(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }
